# aerial-cuda-accelerated-ran

./: .dockerignore  .gitattributes  .gitignore  ATTRIBUTION.rst  CMakeLists.txt  CMakePresets.json  CONTRIBUTING.md  LICENSE  README.md  aerial-sdk-version  eval "$(ssh-agent -s)"  eval "$(ssh-agent -s)".pub
cuMAC-CP/: CMakeLists.txt
cuMAC-CP/config/: cumac_cp.yaml  nvipc_multi_instances.yaml
cuMAC-CP/examples/L2IntegrationExample/: CMakeLists.txt  cu_mac_api.h  cumcp_nvipc.yaml  cumcp_test.cu  l2_nvipc.yaml  l2_test.cpp  main.cu
cuMAC-CP/src/: cumac_app.hpp  cumac_cp_configs.cpp  cumac_cp_configs.hpp  cumac_cp_handler.cpp  cumac_cp_handler.hpp  cumac_cp_tv.cpp  cumac_cp_tv.hpp  cumac_cuda.cu  cumac_cuda.hpp  cumac_task.cpp  cumac_task.hpp  main.cpp  msg_recv.cpp  msg_recv.hpp  signal_handler.cpp  signal_handler.hpp
cuMAC/examples/muMimoUeGrpL2Integration/: CMakeLists.txt  config.yaml  cumac_muUeGrp_api.h  cumac_muUeGrp_test.cu  cumac_muUeGrp_test.h  cumac_nvipc.yaml  l2_muUeGrp_test.cpp  l2_muUeGrp_test.h  l2_nvipc.yaml  simple_gemm_cfp16.cu
cuMAC/examples/multiCellSchedulerUeSelection/: CMakeLists.txt  main.cpp
cuPHY-CP/aerial-fh-driver/test_rmax/: CMakeLists.txt  aerial_fh_rmax_tests.cpp  aerial_fh_rmax_tests.hpp
cuPHY-CP/compression_decompression/comp_decomp_examples/: CMakeLists.txt  QAM_param_test.cu  QAM_test.cu  barsync.cu  benchmark.cu  modcomp_test.cu  oran.cu  packets.cu
cuPHY-CP/cuphycontroller/examples/: CMakeLists.txt  cuphycontroller_scf.cpp
cuPHY-CP/cuphyl2adapter/: .gitignore  CMakeLists.txt  README.md
cuPHY-CP/cuphyl2adapter/lib/: CMakeLists.txt
cuPHY-CP/cuphyl2adapter/tests/: CMakeLists.txt
cuPHY-CP/cuphyoam/: CMakeLists.txt
cuPHY-CP/cuphyoam/examples/: aerial_cell_ctrl_cmd.py  aerial_cell_eaxcids_update.py  aerial_cell_multi_attrs_update.py  aerial_cell_param_attn_update.py  aerial_cell_param_net_update.py  aerial_check_rx_data.py  aerial_config_mac_rnti.py  aerial_fapi_delay_cmd.py  aerial_get_cpu_utilization.py  aerial_get_l2msgs.py  aerial_get_sfn.py  aerial_get_test_stream.py  aerial_pusch_h5dump_next_crc.py  aerial_simulate_cpu_stall.py  aerial_terminate_cuphycontroller.py  aerial_ul_pcap_capture_next_crc.py  aerial_ul_pcap_flush.py  aerial_ul_u_plane_drop.py  aerial_ul_zero_uplane.py  cell_bw_update_test.sh  cell_exacid_update_test.sh  cpu_stall_simulation.sh  cus_conn_mgr.cpp  dl_ul_exponent.xml  if_down_signal_detection_delay_test.cpp  if_down_signal_detection_delay_test.sh  iq_data_fmt.xml  launch_pattern_x2_update.py  libyang_test.cpp  mac_vlan_pcp.xml  nic_du_mac.xml  p9_msg_client_grpc_test.cpp  test_basic_dpdk.cpp  test_cuphyoam.cpp  test_eaxcids.yaml  test_grpc_cpp_client.cpp  test_grpc_push_notification_client.cpp  test_grpc_stream.cpp  test_time.cpp  ul_u_plane_pkts_drop_simulation.sh  (+2 more)
cuPHY-CP/cuphyoam/inc/: cuphyoam.hpp
cuPHY-CP/cuphyoam/proto/: aerial_common.proto  aerial_push_notification.proto  scf_fapi_p9.proto
cuPHY-CP/cuphyoam/src/: common_svc.cpp  cuphyoam.cpp  cus_conn_mgr.cpp  oam_services.hpp  push_notification_svc.cpp  scf_fapi_oam_services.cpp  scf_fapi_oam_services.hpp  utils.cpp  (+3 more)
cuPHY-CP/data_lake/: CMakeLists.txt  data_lake.cpp  data_lake.hpp  e3_agent.cpp  e3_agent.hpp
cuPHY-CP/gt_common_libs/: .gitignore  CMakeLists.txt  README.md  libnvipc_pack_test.sh  nvipc_unit_test.sh  pack_nvipc.sh  test_ipc.sh
cuPHY-CP/ru-emulator/: CMakeLists.txt  README.md
cuPHY-CP/scfl2adapter/: .clang-format  CMakeLists.txt  README.md  dummy.cu
cuPHY-CP/tests/: CMakeLists.txt  test_cuphycp.cpp  test_utils.cpp  test_utils.hpp
cuPHY/nvlog/: CMakeLists.txt
pyaerial/: .gitignore  CMakeLists.txt  README.md  pyproject.toml  setup.py
pyaerial/container/: build.sh  pyaerial_recipe.py  requirements-amd64.txt  requirements-arm64.txt  requirements.txt  run.sh
pyaerial/models/: llrnet.onnx  neural_rx.onnx
pyaerial/notebooks/: datalake_channel_estimation.ipynb  datalake_pusch_decoding.ipynb  datalake_pusch_multicell.ipynb  example_csi_rs_tx_rx.ipynb  example_ldpc_coding.ipynb  example_neural_receiver.ipynb  example_pusch_simulation.ipynb  example_simulated_dataset.ipynb  example_srs_tx_rx.ipynb  llrnet_dataset_generation.ipynb  llrnet_model_training.ipynb
pyaerial/pybind11/: cuda_array_interface.cpp  cuda_array_interface.hpp  pycuphy_cfo_ta_est.cpp  pycuphy_cfo_ta_est.hpp  pycuphy_chan_model.cpp  pycuphy_chan_model.hpp  pycuphy_channel_eq.cpp  pycuphy_channel_eq.hpp  pycuphy_channel_est.cpp  pycuphy_channel_est.hpp  pycuphy_crc_check.cpp  pycuphy_crc_check.hpp  pycuphy_crc_encode.cpp  pycuphy_crc_encode.hpp  pycuphy_csirs_rx.cpp  pycuphy_csirs_rx.hpp  pycuphy_csirs_tx.cpp  pycuphy_csirs_tx.hpp  pycuphy_csirs_util.cpp  pycuphy_csirs_util.hpp  pycuphy_debug.cpp  pycuphy_debug.hpp  pycuphy_dmrs.cpp  pycuphy_dmrs.hpp  pycuphy_ldpc.hpp  pycuphy_ldpc_decoder.cpp  pycuphy_ldpc_derate_match.cpp  pycuphy_ldpc_encoder.cpp  pycuphy_ldpc_rate_match.cpp  pycuphy_ldpc_util.cpp  pycuphy_noise_intf_est.cpp  pycuphy_noise_intf_est.hpp  pycuphy_params.hpp  pycuphy_pdsch.cpp  pycuphy_pdsch.hpp  pycuphy_pdsch_params.cpp  pycuphy_pusch.cpp  pycuphy_pusch.hpp  pycuphy_pusch_params.cpp  pycuphy_pybind.cpp  (+14 more)
pyaerial/scripts/: .flake8  .pylintrc  imodule-tensorrt-e2e-test.sh  install_dev_pkg.sh  pusch_tvs.txt  run_notebooks.sh  run_static_tests.sh  run_unit_tests.sh
pyaerial/tests/: conftest.py  test_algo_algorithms.py  test_algo_cfo_ta_estimator.py  test_algo_channel_equalizer.py  test_algo_channel_estimator.py  test_algo_noise_intf_estimator.py  test_algo_rsrp_estimator.py  test_algo_srs_channel_estimator.py  test_algo_trt_engine.py  test_chmod_cdl.py  test_chmod_fading_chan.py  test_chmod_ofdm.py  test_chmod_sls.py  test_chmod_tdl.py  test_csirs_rx.py  test_csirs_tx.py  test_ldpc_crc_check.py  test_ldpc_crc_encode.py  test_ldpc_decoder.py  test_ldpc_derate_match.py  test_ldpc_encoder.py  test_ldpc_endtoend.py  test_ldpc_random_data.py  test_ldpc_rate_match.py  test_pdsch_dmrs_tx.py  test_pdsch_pdsch_tx.py  test_pdsch_separable_pdsch_tx.py  test_pusch_pusch_rx.py  test_srs_rx.py  test_srs_tx.py  test_util_data.py  test_util_fapi.py
(+2894 files in other folders)
